--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>{{ if .Title }}{{ .Title }} | {{ end }}{{ .Site.Title }}</title>
-  <link rel="stylesheet" href="/css/styles.css">
+  {{ partial "head.html" . }}
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1><a href="/">{{ .Site.Title }}</a></h1>
-    </div>
-  </header>
+  {{ partial "header.html" . }}
   <main class="container">
     {{ block "main" . }}{{ end }}
   </main>
-  <footer class="container">
-    <p>&copy; {{ now.Format "2006" }} {{ .Site.Params.author }}</p>
-  </footer>
+  {{ partial "footer.html" . }}
 </body>
 </html>
